fixed swagger inconsistencies and added postSessionUpdate endpoint
